# rusoto-s3-example

./: .gitignore  Cargo.toml  README.md
src/: main.rs
