[package]
name = "rusoto-s3-test"
version = "0.1.0"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_core = "0.43.0"
rusoto_s3 = "0.43.0"
tokio = "0.2.20"
bytes = "0.5.4"
futures = "0.3.5"
